--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "jest-extended": "^2.0.0",
     "jest-sorted": "^1.0.14",
     "pg-format": "^1.0.4",
-    "supertest": "^6.3.4",
-    "husky": "^8.0.2"
+    "supertest": "^6.3.4"
+
   },
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "husky": "^8.0.2"
 
   },
   "jest": {
